[package]
name = "rust-learning"
version = "0.1.0"
authors = ["OnikenX <OnikenX@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rust-learning"
path = "src/rust-learning.rs"


[[bin]]
name = "libp2p-test"
path = "src/libp2p-test.rs"

[[bin]]
name = "chat"
path = "src/chat.rs"

[dependencies]
libp2p = { version = "0.31", features = ["tcp-tokio", "mdns-tokio"] }
tokio = { version = "0.3", features = ["io-util", "io-std", "stream", "macros", "rt", "rt-multi-thread", "fs", "time", "sync"] }
serde = {version = "=1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.5"
log = "0.4"
pretty_env_logger = "0.4"
