[package]
name = "rust-learning"
version = "0.1.0"
authors = ["OnikenX <OnikenX@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "gossipsub-chat"
path = "src/gossipsub-chat.rs"

[dependencies]
async-std = { version = "1.6.2", features = ["attributes"] }
futures = "*"
libp2p = { version = "0.31", features = ["tcp-tokio", "mdns-tokio", "floodsub","mplex", "noise", "gossipsub", "default"] }
libp2p-gossipsub = {version = "0.29.0"}
#, features = ["IdentTopic"]
tokio = { version = "0.3", features = ["io-util", "io-std", "stream", "macros", "rt", "rt-multi-thread", "fs", "time", "sync"] }
serde = {version = "=1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.5"
log = "0.4"
pretty_env_logger = "0.4"
env_logger = "0.8.1"
